👌IMPROVE: alignment issues

--- a/style.scss
+++ b/style.scss
@@ -412,6 +412,7 @@ footer {
     .box {
       .btn {
         padding: 0 0 2em 0;
+
         a {
           border: 2px solid var(--clr-box-btn);
           font-size: 1.1em;
@@ -421,44 +422,47 @@ footer {
 
     .sponsors {
       grid-template-columns: 1fr;
-      gap: 3em;
+      gap: 2.5em;
       padding: 0;
 
       div {
-        height: 350px;
+        height: 380px;
       }
 
       img {
         width: 50%;
       }
     }
+  }
 
-    &.about {
-      h2 {
-        font-size: 1.3em;
-        padding: 0 13px;
+  main.about {
+    h2 {
+      font-size: 1.3em;
+      padding: 0 13px;
+    }
+
+    p {
+      font-size: 1em;
+      padding: 0 13px 20px 13px;
+      margin: 0;
+    }
+
+    ul.technologies {
+      padding: 0 13px 20px 13px;
+
+      li:not(:last-of-type) {
+        padding: 0 0 0.5em 0;
+      }
+    }
+
+    div.team {
+      h3 {
+        font-size: 1.1em;
       }
 
-      p {
-        font-size: 1em;
-        padding: 0 13px 0 18px;
-      }
-
-      ul.technologies {
-        li:not(:last-of-type) {
-          padding: 0 0 0.5em 0;
-        }
-      }
-
-      div.team {
-        h3 {
-          font-size: 1.1em;
-        }
-
-        ul {
-          li {
-            font-size: 0.9em;
-          }
+      ul {
+        li {
+          font-size: 0.9em;
         }
       }
     }
